fixed background on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,9 @@ body{
     justify-content: center;
     align-items: center;
     background-image: url('./assets/city.gif');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .container{
